# mist-firmware

./: archie.c  boot.c  config.c  data_io.c  debug.h  fat_compat.c  fat_compat.h  fat_test.c  fpga.c  idxfile.c  idxfile.h  logo.h  main.c  menu-8bit.c  menu-minimig.c  menu.c  mist_cfg.c  mist_cfg.h  settings.c  settings.h  state.c  syscalls.c  tos.c  user_io.c  user_io.h
hw/rp2040/: CMakeLists.txt  bitfile.c  build.sh  crc16.c  crc16.h  fifo.c  fpga.c  fpgaconfig.c  fpgadev.c  fpgasupp.c  glue.c  hardware.c  hardware.h  kbdusb.c  keyboard.c  keyboard.h  mist.c  mistmain.c  mistmain.h  mmc.c  pins.h  pio_spi.c  platform.c  platform.h  platformmenu.c  ps2.c  ps2.h  rpdebug.h  rtc.c  rtc.h  rtc_hw.c  sdcard.c  spi.c  spi.h  usbdev.c  usbdev.h  usboffshore.c
hw/rp2040/usbhost/: ds3usb.c  hid_app_mist.c  xboxusb.c  xinput.c
usb/: hid.c  hidparser.c  joymapping.c  joymapping.h  joystick.c  timer.c  xboxusb.c
